# denseforge

./: .gitignore  COMPETITOR_ANALYSIS.md  COMPETITOR_RESEARCH.md  IMPROVEMENT_ANALYSIS.md  JSPACE_FEATURES.md  OPTIMIZATION.md  OPTIMIZATION_PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
denseforge/: __init__.py  advanced_rag.py  async_wrapper.py  cli.py  config.py  mcp_server.py  persistence.py  production.py  robustness.py  security.py
denseforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
denseforge/agents/: __init__.py  dynamic.py  memory.py  orchestrator.py
denseforge/core/: __init__.py  forge.py
denseforge/embeddings/: adaptive.py  cache.py
denseforge/generation/: __init__.py  attribution.py  llm.py  position.py  reranker.py
denseforge/ingestion/: augmentation.py  chunking.py  columnar.py  dedup.py  streaming.py
denseforge/integrations/: harvest.py
denseforge/observability/: __init__.py  click_tracking.py  evaluation.py  memory_profiler.py  metrics.py  provenance.py
denseforge/optimization/: carbon.py  continual.py
denseforge/protocols/: mcp_server.py  router.py
denseforge/reasoning/: __init__.py  causal.py  conflict.py  self_rag.py  speculative.py
denseforge/retrieval/: advanced.py  advanced_retrieval.py  cag.py  concept_workspace.py  fusion.py  hippo.py  raptor.py  triple_hybrid.py
denseforge/synthesis/: adaptive_controller.py  bidirectional_feedback.py  holistic_optimizer.py  uqr.py  (+2 more)
docs/: QUICKSTART.md
examples/: basic_usage.py
tests/: test_async_wrapper.py  test_concept_workspace.py  test_denseforge.py  test_production.py  test_robustness.py  test_security_advanced.py
