[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "denseforge"
version = "1.0.0"
description = "Autonomous Cognitive Knowledge Platform — SOTA RAG + Agents + Causal Reasoning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "DenseForge Team"}]
keywords = ["rag", "llm", "ai", "knowledge", "agents", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.7.0",
    "rank-bm25>=0.2.2",
    "scipy>=1.11.0",
    "networkx>=3.2",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
gpu = ["torch>=2.1.0", "faiss-gpu>=1.7.2"]
models = ["transformers>=4.40.0", "accelerate>=0.28.0"]
enterprise = ["opentelemetry-api>=1.20.0", "opentelemetry-sdk>=1.20.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]
all = ["denseforge[gpu,models,enterprise,dev]"]

[project.scripts]
denseforge = "denseforge.cli:main"

[tool.setuptools.packages.find]
include = ["denseforge*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
